using main layout and block for children layout with twig, using setName

--- a/app/views/pages/contact.twig
+++ b/app/views/pages/contact.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>Bienvenue</h1>
+    <h1>Me contacter</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Dolor porro nisi eum earum doloremque cumque maiores consequatur amet
          accusamus cupiditate! Atque dolorem, libero nisi molestias placeat 
