--- a/app/views/pages/contact.twig
+++ b/app/views/pages/contact.twig
@@ -8,4 +8,22 @@
          accusamus cupiditate! Atque dolorem, libero nisi molestias placeat 
          accusamus necessitatibus nam autem.</p>
 
+    <form action="{{ path_for('contact')}}" method="post">
+        <div class="form-group">
+            <label for="name">Votre nom</label>
+            <input type="text" class="form-control" name="name" id="name">
+        </div>
+        <div class="form-group">
+            <label for="email">Votre email</label>
+            <input type="text" class="form-control" name="email" id="email">
+        </div>
+        <div class="form-group">
+            <label for="content">Votre message</label>
+            <textarea type="text" class="form-control" name="content" id="content"></textarea>
+        </div>
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" value="Envoyer">
+        </div>
+    </form>
+
 {% endblock %}
